--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,7 +9,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
-resources.view.doctype=HTML5
+resources.view.doctype='HTML5'
 
 resources.db.adapter = "PDO_MSQL"
 resources.db.params.dbname = "buffet"
