--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,5 @@
-#Sat Mar 03 20:27:51 CET 2012
+#Thu Mar 29 23:06:15 CEST 2012
 eclipse.preferences.version=1
-include_path=0;/ola1
+include_path=0;/buffet.pl\u00051;/usr/share/php
+phpVersion=php5.3
+use_asp_tags_as_php=false
