--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -5,6 +5,8 @@ includePaths.library = APPLICATION_PATH "/../library"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 appnamespace = "Application"
+autoloaderNamespaces[] = "Core_"
+
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 
