--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -8,6 +8,7 @@ appnamespace = "Application"
 autoloaderNamespaces[] = "Core_"
 
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
+resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
