Poczatki panelu administracyjnego nie do konca udane

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -7,9 +7,12 @@ bootstrap.class = "Bootstrap"
 appnamespace = "Application"
 autoloaderNamespaces[] = "Core_"
 
+resources.modules = ""
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
+
+admin.resources.layout.layout = "layout"
 
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.view.doctype='HTML5'
@@ -20,6 +23,9 @@ resources.db.params.dbname = "buffet"
 resources.db.params.username = "root"
 resources.db.params.password = ""
 resources.db.params.charset = "utf8"
+
+
+
 
 
 [staging : production]
