--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,9 +12,13 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
 
-admin.resources.layout.layout = "layout"
-
+; Layout
+resources.layout.pluginClass = "Core_Layout_Controller_Plugin_ModuleLayout"
+resources.layout.layout = "layout"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
+resources.layout.module.admin.layout = "admin"
+resources.layout.module.admin.layoutPath = APPLICATION_PATH "/modules/admin/layouts/scripts/"
+
 resources.view.doctype='HTML5'
 
 
