--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -20,6 +20,7 @@ resources.layout.module.admin.layout = "admin"
 resources.layout.module.admin.layoutPath = APPLICATION_PATH "/modules/admin/layouts/scripts/"
 
 resources.view.doctype='HTML5'
+resources.view.helperPath.Core_View_Helper = "Core/View/Helper"
 
 
 resources.db.adapter = "PDO_MSQL"
