Panel adm proby zrobienia inserta

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -19,6 +19,7 @@ resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.layout.module.admin.layout = "admin"
 resources.layout.module.admin.layoutPath = APPLICATION_PATH "/modules/admin/layouts/scripts/"
 resources.layout.module.admin.modelPath = APPLICATION_PATH "/modules/admin/models/"
+resources.layout.module.admin.formPath = APPLICATION_PATH "/modules/admin/forms/"
 
 resources.view.doctype='HTML5'
 resources.view.helperPath.Core_View_Helper = "Core/View/Helper"
