--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
-include.path=${php.global.include.path}
+file.reference.php-libzend-framework-php=../../../usr/share/php/libzend-framework-php
+include.path=\
+    ${php.global.include.path}:\
+    ${file.reference.php-libzend-framework-php}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
