zmiany w panelu administracyjnym

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -18,7 +18,7 @@ resources.layout.layout = "layout"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.layout.module.admin.layout = "layout_admin"
 resources.layout.module.admin.layoutPath = APPLICATION_PATH "/modules/admin/layouts/scripts/"
-resources.layout.module.admin.modelPath = APPLICATION_PATH "/modules/admin/models/"
+resources.layout.module.admin.modelsPath = APPLICATION_PATH "/modules/admin/models/"
 resources.layout.module.admin.formPath = APPLICATION_PATH "/modules/admin/forms/"
 
 resources.view.doctype='HTML5'
