Zmiany ustawienia bazy

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -27,8 +27,8 @@ resources.view.helperPath.Core_View_Helper = "Core/View/Helper"
 
 resources.db.adapter = "PDO_MSQL"
 resources.db.params.dbname = "buffet"
-resources.db.params.username = "root"
-resources.db.params.password = ""
+resources.db.params.username = "buffet"
+resources.db.params.password = "Polki890"
 resources.db.params.charset = "utf8"
 
 
