Zmiana ustawien bazy:

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -48,5 +48,5 @@ resources.frontController.params.displayExceptions = 1
 
 resources.db.adapter = "PDO_MYSQL"
 resources.db.params.dbname = "buffet"
-resources.db.params.username = "root"
-resources.db.params.password = ""
+resources.db.params.username = "buffet"
+resources.db.params.password = "Polki890"
