Wydzielenie konfiguracji nieudostępnianej

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -11,9 +11,11 @@ resources.modules = ""
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
+resources.frontController.plugins.acl  = "Core_Controller_Plugin_Acl"
+resources.frontController.plugins.acl  = "Core_Controller_Plugin_LangSelector"
 
 ; Layout
-resources.layout.pluginClass = "Core_Layout_Controller_Plugin_ModuleLayout"
+resources.layout.pluginClass = "Core_Controller_Plugin_ModuleLayout"
 resources.layout.layout = "layout"
 resources.layout.layoutPath = APPLICATION_PATH "/layouts/scripts/"
 resources.layout.module.admin.layout = "layout_admin"
@@ -24,16 +26,8 @@ resources.layout.module.admin.formPath = APPLICATION_PATH "/modules/admin/forms/
 resources.view.doctype='HTML5'
 resources.view.helperPath.Core_View_Helper = "Core/View/Helper"
 
-
-resources.db.adapter = "PDO_MSQL"
-resources.db.params.dbname = "buffet"
-resources.db.params.username = "buffet"
-resources.db.params.password = "Polki890"
 resources.db.params.charset = "utf8"
-
-
-
-
+resources.db.isDefaultTableAdapter = true
 
 [staging : production]
 
@@ -45,8 +39,3 @@ phpSettings.display_errors = 1
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
-
-resources.db.adapter = "PDO_MYSQL"
-resources.db.params.dbname = "buffet"
-resources.db.params.username = "buffet"
-resources.db.params.password = "Polki890"
