Poprawka pluginu ACL

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,7 +12,7 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.acl  = "Core_Controller_Plugin_Acl"
-resources.frontController.plugins.acl  = "Core_Controller_Plugin_LangSelector"
+resources.frontController.plugins.langSelector  = "Core_Controller_Plugin_LangSelector"
 
 ; Layout
 resources.layout.pluginClass = "Core_Controller_Plugin_ModuleLayout"
