Zwiększenie limitu rozmiaru wysyłanych plików

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,5 @@
+php_value upload_max_filesize    110M
+php_value post_max_size          120M
 
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
