Poprawki kolejności sortowania zapowiedzi i newsów

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,6 @@
 file.reference.php-libzend-framework-php=../../../usr/share/php/libzend-framework-php
 include.path=\
-    ${php.global.include.path}:\
-    ${file.reference.php-libzend-framework-php}
+    ${php.global.include.path}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
